[package]
name = "contracts"
description = "Uniswap v2 contracts written in Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2" }
types = { package = "casper-types", version="1.2" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
