[package]
name = "contracts"
description = "Uniswap v2 contracts written in Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2" }
types = { package = "casper-types", version="1.2" }
integer-sqrt = "0.1.5"
solid = "0.1.5"
ethereum-types = "0.5.2"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]

# enable overflow checks to make it behave like we used SafeMath in solidity
[profile.release]
overflow-checks = true
