[package]
name = "uniswap-erc20"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2" }
types = { package = "casper-types", version="1.2" }
solid = "0.1.5"
renvm-sig = "0.1.1"
elliptic-curve = "0.8.3"
uniswap-libs = { path = "../uniswap-libs" }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
name = "uniswap_erc20"

[features]
default = ["contract/std", "types/std"]
no_name = []
no_symbol = []
no_decimals = []
no_total_supply = []
no_balance_of = []
no_allowance = []
no_domain_separator = []
no_permit_typehash = []
no_nonces = []
no_approve = []
no_transfer = []
no_transfer_from = []
