[package]
name = "uniswap-factory"
description = "Uniswap v2 Factory contract written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2" }
types = { package = "casper-types", version="1.2" }
solid = "0.1.5"
create2 = "0.0.2"
parity-hash = "1.2.2"
evm = "0.28.0"
ethabi = "14.1.0"
primitive-types = "0.6.1"
ethereum_abi = "0.3.0"
renvm-sig = "0.1.1"
uniswap-libs = { path = "../uniswap-libs" }
getrandom = { version = "0.2", features = ["js"] }

[lib]
name = "uniswap_factory"

[features]
default = ["contract/std", "types/std"]

# enable overflow checks to make it behave like we used SafeMath in solidity
[profile.release]
overflow-checks = true