[package]
name = "uniswap-libs"
description = "Uniswap v2 libraries written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { package = "casper-types", version="1.2" }
solid = "0.1.5"

[lib]
name = "uniswap_libs"

# enable overflow checks to make it behave like we used SafeMath in solidity
[profile.release]
overflow-checks = true