[package]
name = "uniswap-pair"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { package = "casper-types", version="1.2" }
solid = "0.1.5"

[[bin]]
name = "uniswap-pair"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]

# enable overflow checks to make it behave like we used SafeMath in solidity
[profile.release]
overflow-checks = true