[package]
name = "uniswap-pair"
description = "Uniswap v2 Pair contract written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { package = "casper-types", version="1.2" }
contract = { package = "casper-contract", version="1.2" }
solid = "0.1.5"
ethabi = "14.1.0"
parity-hash = "1.2.2"
integer-sqrt = "0.1.5"
uniswap-libs = { path = "../uniswap-libs" }
uniswap-erc20 = { path = "../uniswap-erc20" }

# [[bin]]
# name = "uniswap-pair"
# path = "src/main.rs"
# bench = false
# doctest = false
# test = false
[lib]
name = "uniswap_pair"

[features]
default = ["contract/std", "types/std"]

# enable overflow checks to make it behave like we used SafeMath in solidity
[profile.release]
overflow-checks = true